k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aycemon-service
  namespace: aycemon
spec:
  selector:
    app: aycemon
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
