k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aycemon-ingress
  namespace: aycemon
spec:
  ingressClassName: nginx
  rules:
    - host: aycemon.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aycemon-service
                port:
                  number: 80
